--- a/index.html
+++ b/index.html
@@ -1,82 +1,43 @@
+<!-- index.html (About Me) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Zafaryab | Researcher & Photographer</title>
-
-  <!-- Bootstrap CSS -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Zafaryab | About Me</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Font Awesome for Social Icons -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-
-  <!-- Header -->
-  <header class="bg-dark text-white text-center py-5">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <h1 class="display-4">Zafaryab</h1>
-      <p class="lead">Researcher & Hobby Photographer</p>
-      <nav class="mt-4">
-        <a href="#about" class="btn btn-outline-light mx-2">About</a>
-        <a href="#research" class="btn btn-outline-light mx-2">Research</a>
-        <a href="#photography" class="btn btn-outline-light mx-2">Photography</a>
-        <a href="#contact" class="btn btn-outline-light mx-2">Connect</a>
-      </nav>
-    </div>
-  </header>
-
-  <!-- About Section -->
-  <section id="about" class="py-5">
-    <div class="container">
-      <h2 class="mb-4">About Me</h2>
-      <p>I'm a researcher in [your field], exploring [your interests]. In my free time, I enjoy photography—capturing everyday moments, light, and emotion through a lens.</p>
-    </div>
-  </section>
-
-  <!-- Research Section -->
-  <section id="research" class="bg-light py-5">
-    <div class="container">
-      <h2 class="mb-4">Research</h2>
-      <ul>
-        <li><strong>Area:</strong> Machine Learning, [your specialties]</li>
-        <li><strong>Affiliation:</strong> [Your Institution or Lab]</li>
-        <li><strong>Publications:</strong> <a href="[your Google Scholar link]" target="_blank">View Publications</a></li>
-      </ul>
-    </div>
-  </section>
-
-  <!-- Photography Portfolio -->
-  <section id="photography" class="py-5">
-    <div class="container">
-      <h2 class="mb-4">Photography Portfolio</h2>
-      <div class="row g-3">
-        <div class="col-md-4"><img src="images/photo1.jpg" class="img-fluid rounded" alt="Photo 1" /></div>
-        <div class="col-md-4"><img src="images/photo2.jpg" class="img-fluid rounded" alt="Photo 2" /></div>
-        <div class="col-md-4"><img src="images/photo3.jpg" class="img-fluid rounded" alt="Photo 3" /></div>
-        <!-- Add more rows/images -->
+      <a class="navbar-brand" href="index.html">Zafaryab</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="index.html">About Me</a></li>
+          <li class="nav-item"><a class="nav-link" href="work.html">My Work</a></li>
+          <li class="nav-item"><a class="nav-link" href="photography.html">Photography</a></li>
+          <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+        </ul>
       </div>
     </div>
+  </nav>
+
+  <!-- About Me Section -->
+  <section class="container py-5">
+    <h1 class="display-4">Hi, I'm Zafaryab</h1>
+    <p class="lead">I'm a researcher working on [your field], and a passionate hobby photographer.</p>
+    <p>I currently work at [Your Institution or Lab], where I explore [your research focus]. When not in front of code or papers, I capture stories through my camera lens.</p>
   </section>
 
-  <!-- Social Media Section -->
-  <section id="contact" class="bg-light py-5 text-center">
-    <div class="container">
-      <h2 class="mb-4">Find Me Online</h2>
-      <a href="https://github.com/yourusername" class="mx-3 text-dark" target="_blank"><i class="fab fa-github fa-2x"></i></a>
-      <a href="https://linkedin.com/in/yourprofile" class="mx-3 text-primary" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-      <a href="https://instagram.com/yourhandle" class="mx-3 text-danger" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-    </div>
-  </section>
-
-  <!-- Footer -->
   <footer class="text-center py-4 bg-dark text-white">
     <p>&copy; 2025 Zafaryab. All rights reserved.</p>
   </footer>
 
-  <!-- Bootstrap JS (Optional) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
