--- a/index.html
+++ b/index.html
@@ -29,9 +29,16 @@
 
   <!-- About Me Section -->
   <section class="container py-5">
-    <h1 class="display-4">Hi, I'm Zafaryab</h1>
-    <p class="lead">I'm a researcher working on [your field], and a passionate hobby photographer.</p>
-    <p>I currently work at [Your Institution or Lab], where I explore [your research focus]. When not in front of code or papers, I capture stories through my camera lens.</p>
+    <div class="row align-items-center">
+      <div class="col-md-4 text-center">
+        <img src="images/profile.jpg" alt="Zafaryab Haider" class="img-fluid rounded-circle mb-3" style="max-width: 200px;">
+      </div>
+      <div class="col-md-8">
+        <h1 class="display-4">Hi, I'm Zafaryab</h1>
+        <p class="lead">Ph.D. student in Electrical and Computer Engineering at the University of Maine, with a passion for advancing AI and ensuring its security.</p>
+        <p>I specialize in Large Language Models (LLMs), AI security, and cryptography. My academic journey includes teaching, mentoring, and publishing in leading scientific journals. I’ve served as a faculty member at Aligarh Muslim University, and I'm currently contributing to cutting-edge research projects in AI at UMaine. Beyond academia, I explore the world through photography, capturing everyday stories and moments through my lens.</p>
+      </div>
+    </div>
   </section>
 
   <footer class="text-center py-4 bg-dark text-white">
