--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img src="images/profile.jpg" alt="Zafaryab Haider" class="img-fluid rounded-circle mb-3" style="max-width: 200px;">
       </div>
       <div class="col-md-8">
-        <h1 class="display-4">Hi, I'm Zafaryab</h1>
+        <h1 class="display-4">Hi, I'm Zafaryab Haider</h1>
         <p class="lead">Ph.D. student in Electrical and Computer Engineering at the University of Maine, with a passion for advancing AI and ensuring its security.</p>
         <p>I specialize in Large Language Models (LLMs), AI security, and cryptography. My academic journey includes teaching, mentoring, and publishing in leading scientific journals. I’ve served as a faculty member at Aligarh Muslim University, and I'm currently contributing to cutting-edge research projects in AI at UMaine. Beyond academia, I explore the world through photography, capturing everyday stories and moments through my lens.</p>
       </div>
