--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Zafaryab | About Me</title>
+  <title>Zafaryab Haider | About Me</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -36,8 +36,89 @@
       <div class="col-md-8">
         <h1 class="display-4">Hi, I'm Zafaryab Haider</h1>
         <p class="lead">Ph.D. student in Electrical and Computer Engineering at the University of Maine, with a passion for advancing AI and ensuring its security.</p>
-        <p>I specialize in Large Language Models (LLMs), AI security, and cryptography. My academic journey includes teaching, mentoring, and publishing in leading scientific journals. I’ve served as a faculty member at Aligarh Muslim University, and I'm currently contributing to cutting-edge research projects in AI at UMaine. Beyond academia, I explore the world through photography, capturing everyday stories and moments through my lens.</p>
+        <p>I specialize in Large Language Models (LLMs), AI security, and cryptography. My academic journey includes teaching, mentoring, and publishing in leading scientific journals. Over the years, I've taught courses ranging from Data Structures and Internet Tools to Information Security and C Programming, guiding students in both theoretical and hands-on learning environments.</p>
+        <p>As a researcher and mentor, I've contributed to impactful projects including reward optimization in LLMs, marine mammal acoustic monitoring using deep learning, and healthcare diagnostics through self-supervised learning. I’ve also led student innovations like smart assistive devices and surveillance systems.</p>
+        <p>Beyond academia, I have a deep-rooted interest in photography. You can explore some of my visual storytelling through my <a href="photography.html">photography portfolio</a>.</p>
       </div>
+    </div>
+  </section>
+
+  <!-- Courses Taught Carousel -->
+  <section class="container py-5">
+    <h2 class="text-center mb-4">Courses I've Taught</h2>
+    <div id="coursesCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="card text-center p-4">
+            <h5>[COC4010] Information Security</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="card text-center p-4">
+            <h5>[COA3600] Data Structures</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="card text-center p-4">
+            <h5>[COE0431] Internet Tools</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="card text-center p-4">
+            <h5>[COA1910] C Programming</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="card text-center p-4">
+            <h5>[COC0203] Object Oriented Programming</h5>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#coursesCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#coursesCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
+  </section>
+
+  <!-- Projects Carousel -->
+  <section class="container py-5">
+    <h2 class="text-center mb-4">Notable Projects</h2>
+    <div id="projectsCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="card text-center p-4">
+            <h5>Consensus-Based Reward System for LLMs</h5>
+            <p>Developed a mitigation framework against malicious RLHF feedback in language models.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="card text-center p-4">
+            <h5>Marine Mammal Call Classification</h5>
+            <p>Deep learning model to detect North Atlantic Right Whale calls using spectrograms.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="card text-center p-4">
+            <h5>Breast Cancer Image Analysis with BEITv2</h5>
+            <p>Used self-supervised image modeling to boost diagnostic accuracy.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="card text-center p-4">
+            <h5>Assistive Stick for the Visually Impaired</h5>
+            <p>Smart stick capable of obstacle detection and text-to-speech navigation.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#projectsCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#projectsCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
     </div>
   </section>
 
