--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Zafaryab Haider | About Me</title>
+  <title>Zafaryab | About Me</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <style>
+    .scrolling-cards {
+      display: flex;
+      overflow-x: auto;
+      gap: 1rem;
+      scroll-snap-type: x mandatory;
+      padding: 1rem 0;
+    }
+    .scrolling-cards::-webkit-scrollbar {
+      display: none;
+    }
+    .scrolling-cards .card {
+      min-width: 300px;
+      max-width: 300px;
+      scroll-snap-align: center;
+      flex-shrink: 0;
+    }
+  </style>
 </head>
 <body>
   <!-- Navbar -->
@@ -34,92 +52,74 @@
         <img src="images/profile.jpg" alt="Zafaryab Haider" class="img-fluid rounded-circle mb-3" style="max-width: 200px;">
       </div>
       <div class="col-md-8">
-        <h1 class="display-4">Hi, I'm Zafaryab Haider</h1>
+        <h1 class="display-4">Hi, I'm Zafaryab</h1>
         <p class="lead">Ph.D. student in Electrical and Computer Engineering at the University of Maine, with a passion for advancing AI and ensuring its security.</p>
-        <p>I specialize in Large Language Models (LLMs), AI security, and cryptography. My academic journey includes teaching, mentoring, and publishing in leading scientific journals. Over the years, I've taught courses ranging from Data Structures and Internet Tools to Information Security and C Programming, guiding students in both theoretical and hands-on learning environments.</p>
-        <p>As a researcher and mentor, I've contributed to impactful projects including reward optimization in LLMs, marine mammal acoustic monitoring using deep learning, and healthcare diagnostics through self-supervised learning. I’ve also led student innovations like smart assistive devices and surveillance systems.</p>
-        <p>Beyond academia, I have a deep-rooted interest in photography. You can explore some of my visual storytelling through my <a href="photography.html">photography portfolio</a>.</p>
+        <p>I specialize in Large Language Models (LLMs), AI security, and cryptography. I’ve taught a range of computer science courses and led innovative research projects tackling real-world problems. I'm an experienced educator and researcher, passionate about blending technology with human impact.</p>
+        <p>When I'm not immersed in research, I find joy behind the lens. Explore my <a href="photography.html">photography portfolio</a> to see how I capture life through my camera.</p>
       </div>
     </div>
   </section>
 
-  <!-- Courses Taught Carousel -->
+  <!-- Courses Taught Cards -->
   <section class="container py-5">
     <h2 class="text-center mb-4">Courses I've Taught</h2>
-    <div id="coursesCarousel" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="card text-center p-4">
-            <h5>[COC4010] Information Security</h5>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card text-center p-4">
-            <h5>[COA3600] Data Structures</h5>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card text-center p-4">
-            <h5>[COE0431] Internet Tools</h5>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card text-center p-4">
-            <h5>[COA1910] C Programming</h5>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card text-center p-4">
-            <h5>[COC0203] Object Oriented Programming</h5>
-          </div>
-        </div>
+    <div class="scrolling-cards">
+      <div class="card p-3">
+        <h5>[COC4010] Information Security</h5>
+        <p>Focused on key security principles, cryptographic systems, and network threats.</p>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#coursesCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#coursesCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
+      <div class="card p-3">
+        <h5>[COA3600] Data Structures</h5>
+        <p>Covered efficient data organization, storage, and manipulation techniques.</p>
+      </div>
+      <div class="card p-3">
+        <h5>[COE0431] Internet Tools</h5>
+        <p>Introduced tools and technologies powering the modern web and its architecture.</p>
+      </div>
+      <div class="card p-3">
+        <h5>[COA1910] C Programming</h5>
+        <p>Developed foundational programming skills in C with practical labs.</p>
+      </div>
+      <div class="card p-3">
+        <h5>[COC0203] OOP</h5>
+        <p>Focused on concepts of classes, objects, inheritance and design principles in Java/C++.</p>
+      </div>
     </div>
   </section>
 
-  <!-- Projects Carousel -->
+  <!-- Projects Cards -->
   <section class="container py-5">
     <h2 class="text-center mb-4">Notable Projects</h2>
-    <div id="projectsCarousel" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="card text-center p-4">
-            <h5>Consensus-Based Reward System for LLMs</h5>
-            <p>Developed a mitigation framework against malicious RLHF feedback in language models.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card text-center p-4">
-            <h5>Marine Mammal Call Classification</h5>
-            <p>Deep learning model to detect North Atlantic Right Whale calls using spectrograms.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card text-center p-4">
-            <h5>Breast Cancer Image Analysis with BEITv2</h5>
-            <p>Used self-supervised image modeling to boost diagnostic accuracy.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card text-center p-4">
-            <h5>Assistive Stick for the Visually Impaired</h5>
-            <p>Smart stick capable of obstacle detection and text-to-speech navigation.</p>
-          </div>
-        </div>
+    <div class="scrolling-cards">
+      <div class="card p-3">
+        <h5>Consensus-Based Reward System</h5>
+        <p>A framework to counter malicious feedback in LLM reinforcement training.</p>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#projectsCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#projectsCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
+      <div class="card p-3">
+        <h5>Whale Call Classification</h5>
+        <p>Applied deep learning to detect endangered whale calls in underwater audio.</p>
+      </div>
+      <div class="card p-3">
+        <h5>Breast Cancer Detection (BEITv2)</h5>
+        <p>Used masked image modeling to improve medical image classification accuracy.</p>
+      </div>
+      <div class="card p-3">
+        <h5>Assistive Stick</h5>
+        <p>Designed a smart stick that detects obstacles and converts text to speech.</p>
+      </div>
+      <div class="card p-3">
+        <h5>Custom OS Game</h5>
+        <p>Built a Pong game using custom kernel-level system call handling.</p>
+      </div>
     </div>
+  </section>
+
+  <!-- Social Links -->
+  <section class="container py-5 text-center">
+    <h3 class="mb-3">Connect with Me</h3>
+    <a href="https://linkedin.com/in/zafaryab" target="_blank" class="mx-3"><i class="fab fa-linkedin fa-2x"></i></a>
+    <a href="https://instagram.com/yourhandle" target="_blank" class="mx-3"><i class="fab fa-instagram fa-2x"></i></a>
+    <a href="https://facebook.com/yourprofile" target="_blank" class="mx-3"><i class="fab fa-facebook fa-2x"></i></a>
   </section>
 
   <footer class="text-center py-4 bg-dark text-white">
