--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <img src="images/profile.jpg" alt="Zafaryab Haider" class="img-fluid rounded-circle mb-3" style="max-width: 200px;">
       </div>
       <div class="col-md-8">
-        <h1 class="display-4">Hi, I'm Zafaryab</h1>
+        <h1 class="display-4">Hi, I'm Zafaryab Haider</h1>
         <p class="lead">Ph.D. student in Electrical and Computer Engineering at the University of Maine, with a passion for secure, intelligent systems.</p>
         <p>My expertise spans Large Language Models (LLMs), AI security, cryptography, and hardware systems. I've worked extensively with FPGAs, Raspberry Pi, Verilog, and custom OS development. As a Teaching and Research Assistant, I have led labs in Microprocessors, Sequential Logic, and mentored student-led innovation across continents.</p>
         <p>My work bridges cutting-edge AI research and hands-on engineering. Outside of academia, I enjoy photography — a visual counterpart to my analytical world. Explore my <a href="photography.html">photography portfolio</a>.</p>
