--- a/index.html
+++ b/index.html
@@ -8,19 +8,25 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <style>
-    .carousel-inner {
-      display: flex;
+    .scrolling-wrapper {
+      overflow-x: auto;
+      overflow-y: hidden;
+      white-space: nowrap;
     }
-    .carousel-item {
-      flex: 0 0 33.3333%;
-      padding: 0 15px;
+    .scrolling-wrapper .card {
+      display: inline-block;
+      width: 300px;
+      margin: 0 10px;
+      vertical-align: top;
     }
-    .carousel-control-prev,
-    .carousel-control-next {
-      width: 5%;
+    .about-photo {
+      max-width: 200px;
+      border-radius: 50%;
     }
-    .card {
-      height: 100%;
+    .social-icons a {
+      color: #333;
+      margin: 0 10px;
+      font-size: 1.5rem;
     }
   </style>
 </head>
@@ -43,117 +49,97 @@
     </div>
   </nav>
 
-  <!-- About Me Section -->
+  <!-- About Me -->
   <section class="container py-5">
-    <div class="row align-items-center">
+    <div class="row">
       <div class="col-md-4 text-center">
-        <img src="images/profile.jpg" alt="Zafaryab Haider" class="img-fluid rounded-circle mb-3" style="max-width: 200px;">
+        <img src="images/profile.jpg" alt="Zafaryab Haider" class="img-fluid about-photo mb-3">
+        <div class="social-icons">
+          <a href="https://linkedin.com/in/zafaryab" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://instagram.com/yourhandle" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://facebook.com/yourprofile" target="_blank"><i class="fab fa-facebook"></i></a>
+        </div>
+        <p class="mt-3">📧 <a href="mailto:zafaryab.haider@maine.edu">zafaryab.haider@maine.edu</a></p>
       </div>
       <div class="col-md-8">
-        <h1 class="display-4">Hi, I'm Zafaryab Haider</h1>
-        <p class="lead">Ph.D. student in Electrical and Computer Engineering at the University of Maine, with a passion for secure, intelligent systems.</p>
-        <p>My expertise spans Large Language Models (LLMs), AI security, cryptography, and hardware systems. I've worked extensively with FPGAs, Raspberry Pi, Verilog, and custom OS development. As a Teaching and Research Assistant, I have led labs in Microprocessors, Sequential Logic, and mentored student-led innovation across continents.</p>
-        <p>My work bridges cutting-edge AI research and hands-on engineering. Outside of academia, I enjoy photography — a visual counterpart to my analytical world. Explore my <a href="photography.html">photography portfolio</a>.</p>
+        <h1 class="display-5">Hi, I'm Zafaryab</h1>
+        <p class="lead">Ph.D. student at the University of Maine in Electrical and Computer Engineering, blending deep learning with secure systems.</p>
+        <p>I specialize in LLMs, AI security, cryptography, and embedded systems. My projects span from FPGAs and Raspberry Pi to self-supervised deep learning models. As a Teaching Assistant, I led labs in Microprocessors and Sequential Logic, bringing theory into hands-on practice. I’m also a hobbyist photographer, capturing the hidden beauty in everyday life. <a href="photography.html">See my photos →</a></p>
       </div>
     </div>
   </section>
 
-  <!-- Projects Carousel -->
+  <!-- Projects Grid -->
   <section class="container py-5">
-    <h2 class="text-center mb-4">Notable Projects</h2>
-    <div id="projectsCarousel" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="card p-3">
-            <h5>Consensus-Based Reward System</h5>
-            <p>A framework to counter malicious feedback in LLM reinforcement training.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card p-3">
-            <h5>Whale Call Classification</h5>
-            <p>Applied deep learning to detect endangered whale calls in underwater audio.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card p-3">
-            <h5>Breast Cancer Detection (BEITv2)</h5>
-            <p>Used masked image modeling to improve medical image classification accuracy.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card p-3">
-            <h5>Assistive Stick</h5>
-            <p>Designed a smart stick that detects obstacles and converts text to speech.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card p-3">
-            <h5>Custom OS Game</h5>
-            <p>Built a Pong game using custom kernel-level system call handling.</p>
-          </div>
-        </div>
+    <h2 class="mb-4 text-center">Featured Projects</h2>
+    <div class="scrolling-wrapper">
+      <div class="card p-3">
+        <h5>Consensus-Based Reward</h5>
+        <p>Mitigating malicious RLHF in LLM training via consensus reward strategies.</p>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#projectsCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#projectsCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
+      <div class="card p-3">
+        <h5>Whale Call Classifier</h5>
+        <p>Detecting endangered whale calls using deep spectrogram-based models.</p>
+      </div>
+      <div class="card p-3">
+        <h5>BEITv2 for Cancer Imaging</h5>
+        <p>Pre-trained masked image models on breast cancer diagnostics.</p>
+      </div>
+      <div class="card p-3">
+        <h5>Assistive Stick</h5>
+        <p>Smart stick for visually impaired: object detection, text-to-audio conversion.</p>
+      </div>
+      <div class="card p-3">
+        <h5>Custom OS Pong Game</h5>
+        <p>Kernel-user mode system call handling with PS2 hardware support.</p>
+      </div>
     </div>
   </section>
 
-  <!-- Courses Taught Carousel -->
+  <!-- Teaching Assistantship -->
   <section class="container py-5">
-    <h2 class="text-center mb-4">Courses I've Taught</h2>
-    <div id="coursesCarousel" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="card p-3">
-            <h5>Information Security</h5>
-            <p>Focused on security fundamentals, encryption, and systems protection.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card p-3">
-            <h5>Data Structures</h5>
-            <p>Covered efficient data organization, searching, and sorting algorithms.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card p-3">
-            <h5>Internet Tools</h5>
-            <p>Introduced networking protocols and web application fundamentals.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card p-3">
-            <h5>C Programming</h5>
-            <p>Explored low-level programming and memory management through hands-on labs.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card p-3">
-            <h5>Object Oriented Programming</h5>
-            <p>Taught design principles using Java and C++, including polymorphism and inheritance.</p>
-          </div>
-        </div>
+    <h2 class="mb-4 text-center">Graduate Teaching Assistant Roles</h2>
+    <div class="scrolling-wrapper">
+      <div class="card p-3">
+        <h5>Microprocessor Lab</h5>
+        <p>Supported students with x86 and ARM programming and hardware I/O design.</p>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#coursesCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#coursesCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
+      <div class="card p-3">
+        <h5>Sequential Logic Lab</h5>
+        <p>Guided Verilog/VHDL simulation and synthesis for digital logic systems.</p>
+      </div>
+      <div class="card p-3">
+        <h5>Cybersecurity Education</h5>
+        <p>Helped design hands-on exercises and conceptual lectures in secure systems.</p>
+      </div>
     </div>
   </section>
 
-  <!-- Social Links -->
-  <section class="container py-5 text-center">
-    <h3 class="mb-3">Connect with Me</h3>
-    <a href="https://linkedin.com/in/zafaryab" target="_blank" class="mx-3"><i class="fab fa-linkedin fa-2x"></i></a>
-    <a href="https://instagram.com/yourhandle" target="_blank" class="mx-3"><i class="fab fa-instagram fa-2x"></i></a>
-    <a href="https://facebook.com/yourprofile" target="_blank" class="mx-3"><i class="fab fa-facebook fa-2x"></i></a>
+  <!-- Courses Taught -->
+  <section class="container py-5">
+    <h2 class="mb-4 text-center">Courses Taught</h2>
+    <div class="scrolling-wrapper">
+      <div class="card p-3">
+        <h5>Information Security</h5>
+        <p>Encryption, threats, and network defense fundamentals.</p>
+      </div>
+      <div class="card p-3">
+        <h5>Data Structures</h5>
+        <p>Array, tree, graph, and heap-based implementations and algorithms.</p>
+      </div>
+      <div class="card p-3">
+        <h5>Internet Tools</h5>
+        <p>Network protocols, server-client models, and API integration.</p>
+      </div>
+      <div class="card p-3">
+        <h5>C Programming</h5>
+        <p>Procedural programming, pointers, memory and debugging techniques.</p>
+      </div>
+      <div class="card p-3">
+        <h5>Object-Oriented Programming</h5>
+        <p>Java/C++ class design, polymorphism, and software architecture.</p>
+      </div>
+    </div>
   </section>
 
   <footer class="text-center py-4 bg-dark text-white">
