--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <img src="images/profile.jpg" alt="Zafaryab Haider" class="img-fluid about-photo mb-3">
         <div class="social-icons">
           <a href="https://linkedin.com/in/zafaryab" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://instagram.com/yourhandle" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://facebook.com/yourprofile" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.instagram.com/zhaider_lens/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://facebook.com/zaffuyab" target="_blank"><i class="fab fa-facebook"></i></a>
         </div>
         <p class="mt-3">📧 <a href="mailto:zafaryab.haider@maine.edu">zafaryab.haider@maine.edu</a></p>
       </div>
