--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
       margin: 0 10px;
       vertical-align: top;
     }
+    .card p {
+      white-space: normal;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    .card {
+      height: 100%;
+      min-height: 200px;
+    }
     .about-photo {
       max-width: 200px;
       border-radius: 50%;
@@ -59,7 +68,10 @@
           <a href="https://www.instagram.com/zhaider_lens/" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://facebook.com/zaffuyab" target="_blank"><i class="fab fa-facebook"></i></a>
         </div>
-        <p class="mt-3">📧 <a href="mailto:zafaryab.haider@maine.edu">zafaryab.haider@maine.edu</a></p>
+        <p class="mt-3">
+          <i class="fas fa-envelope me-2"></i>
+          <a href="mailto:zafaryab.haider@maine.edu">zafaryab.haider@maine.edu</a>
+        </p>
       </div>
       <div class="col-md-8">
         <h1 class="display-5">Hi, I'm Zafaryab</h1>
