--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
             After completing my B.Tech. in Computer Science and Engineering (2011) and M.Tech. in Software Engineering (2013) with honors, I joined the Department of Computer Engineering at Zakir Husain College of Engineering and Technology (ZHCET), Aligarh Muslim University. As an Assistant Professor and Incharge of the Interactive Instructional Resource Unit, I spent several years shaping the academic and research environment.
           </p>
           <p>
-            I’ve taught a wide range of core computer science subjects including Object-Oriented Programming, Data Structures, C Programming, Internet Tools, and Selected Topics of Computer Engineering (covering Operating Systems, Cryptography, Networks, Databases, and Pervasive Computing). In parallel, I’ve supervised numerous student projects on Android app development, machine learning, networking, and image processing.
+            I’ve taught a wide range of core computer science subjects . In parallel, I’ve supervised numerous student projects on Android app development, machine learning, networking, and image processing.
           </p>
           <p>
             My current research focuses on enhancing the reliability and security of Large Language Models (LLMs), with broader interests in computer vision and multimodal human activity recognition. I combine AI techniques with sensor-based hardware systems like FPGAs and embedded boards, bridging deep learning and edge computing.
           </p>
           <p>
-            Outside the lab, I am a passionate photographer — capturing fleeting moments, cultural stories, and serene landscapes through the lens. You can explore some of my visual work on my <a href=\"photography.html\">photography portfolio</a>.
+            Outside the lab, I am a passionate photographer — capturing fleeting moments, and serene landscapes through the lens. You can explore some of my visual work on my <a href=\"photography.html\">photography portfolio</a>.
           </p>
       </div>
     </div>
