--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">About Me</a></li>
-          <li class="nav-item"><a class="nav-link" href="work.html">My Work</a></li>
+<!--           <li class="nav-item"><a class="nav-link" href="work.html">My Work</a></li> -->
           <li class="nav-item"><a class="nav-link" href="photography.html">Photography</a></li>
           <li class="nav-item"><a class="nav-link active" href="resume.html">Resume</a></li>
         </ul>
