--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="col-md-4 text-center">
         <img src="images/profile.jpg" alt="Zafaryab Haider" class="img-fluid about-photo mb-3">
         <h3>Zafaryab Haider</h3>
-        <p class="text-muted">Ph.D. Student in Electrical and Computer Engineering<br>University of Maine, Orono, USA</p>
+        <p class="text-muted">Research Candidate in Electrical and Computer Engineering<br>University of Maine, Orono, USA</p>
         <p class="mt-3">
           <i class="fas fa-envelope me-2"></i>
           <a href="mailto:zafaryab.haider@maine.edu">zafaryab.haider@maine.edu</a>
