--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="col-md-8">
         <h1 class="display-5">Assalamoalaikum</h1>
           <p class="lead">
-            I’m a Research Candidate in Electrical and Computer Engineering at the University of Maine, where I explore the intersections of AI, security, and embedded systems. I bring over a decade of teaching and research experience, with a strong academic foundation in Computer Science and Software Engineering.
+            I’m currently a Research Candidate in Electrical and Computer Engineering at the University of Maine, where I explore the intersections of AI, security, and embedded systems. I bring over a decade of teaching and research experience, with a strong academic foundation in Computer Science and Software Engineering.
           </p>
           <p>
             After completing my B.Tech. in Computer Science and Engineering (2011) and M.Tech. in Software Engineering (2013) with honors, I joined the Department of Computer Engineering at Zakir Husain College of Engineering and Technology (ZHCET), Aligarh Muslim University. As an Assistant Professor and Incharge of the Interactive Instructional Resource Unit, I spent several years shaping the academic and research environment.
