--- a/index.html
+++ b/index.html
@@ -172,6 +172,15 @@
   </section>
 
   <footer class="text-center py-4 bg-dark text-white">
+    <p class="mt-3">
+          <i class="fas fa-envelope me-2"></i>
+          <a href="mailto:zafaryab.haider@maine.edu">zafaryab.haider@maine.edu</a>
+        </p>
+        <div class="social-icons">
+          <a href="https://linkedin.com/in/zafaryab" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.instagram.com/zhaider_lens/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://facebook.com/zaffuyab" target="_blank"><i class="fab fa-facebook"></i></a>
+        </div>
     <p>&copy; 2025 Zafaryab. All rights reserved.</p>
   </footer>
 
