--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             My current research focuses on enhancing the reliability and security of Large Language Models (LLMs), with broader interests in computer vision and multimodal human activity recognition. I combine AI techniques with sensor-based hardware systems like FPGAs and embedded boards, bridging deep learning and edge computing.
           </p>
           <p>
-            Outside the lab, I am a passionate photographer — capturing fleeting moments, and serene landscapes through the lens. You can explore some of my visual work on my <a href=\"photography.html\">photography portfolio</a>.
+            Outside the lab, I am a passionate photographer — capturing fleeting moments, and serene landscapes through the lens. You can explore some of my visual work on my <a href="\photography.html\">photography portfolio</a>.
           </p>
       </div>
     </div>
