--- a/photography.html
+++ b/photography.html
@@ -28,6 +28,7 @@
   <!-- Photography Gallery -->
   <section class="container py-5">
     <h2 class="mb-4">My Photography</h2>
+    <a href="https://instagram.com/zhaider_lens" target="_blank" class="text-white mx-2"><i class="fab fa-instagram fa-lg"></i></a>
     <div class="row g-3">
       <div class="col-md-4">
         <img src="images/photo1.jpg" class="img-fluid rounded shadow-sm" alt="Photo 1">
