--- a/photography.html
+++ b/photography.html
@@ -81,7 +81,7 @@
       .then(res => res.text())
       .then(data => {
         document.getElementById("footer-placeholder").innerHTML = data;
-        if (window.lightbox) lightbox.init();
+        // if (window.lightbox) lightbox.init();
       });
   </script>
 
