--- a/photography.html
+++ b/photography.html
@@ -47,7 +47,7 @@
 
   <!-- Photography Gallery Section -->
   <section class="container py-5">
-    <h2 class="text-center mb-4">My Photography</h2>
+    <h2 class="text-center mb-4"><a href="https://instagram.com/zhaider_lens" target="_blank" class="text-white mx-2"><i class="fab fa-instagram fa-lg"></i></a>My Photography</h2>
     <div class="row g-3">
       <div class="col-md-4 col-sm-6">
         <a href="images/photo1.jpg" data-lightbox="gallery" data-title="Sunset Vibes">
