--- a/footer.html
+++ b/footer.html
@@ -1,21 +1,54 @@
-<footer class="bg-dark text-white text-center py-4">
-  <div class="container">
-    <p class="mb-1">&copy; 2025 Zafaryab. All rights reserved.</p>
-    <p class="mb-1">
-      <i class="fas fa-envelope me-2"></i>
-      <a href="mailto:zafaryab.haider@maine.edu" class="text-white text-decoration-none">zafaryab.haider@maine.edu</a>
-    </p>
-    <p class="mb-1">
-      <i class="fas fa-phone me-2"></i>
-      <a href="tel:+12077190411" class="text-white text-decoration-none">123 9876</a>
-    </p>
-    <p class="mb-1">
-      <i class="fas fa-map-marker-alt me-2"></i> Oslo, Paine, Aus
-    </p>
-    <div class="mt-2">
-      <a href="https://linkedin.com/in/zafaryab" target="_blank" class="text-white mx-2"><i class="fab fa-linkedin fa-lg"></i></a>
-      <a href="https://instagram.com/zhaider_lens" target="_blank" class="text-white mx-2"><i class="fab fa-instagram fa-lg"></i></a>
-      <a href="https://facebook.com/zaffuyab" target="_blank" class="text-white mx-2"><i class="fab fa-facebook fa-lg"></i></a>
+<footer class="site-footer text-white">
+  <div class="container py-4 py-lg-5">
+    <div class="row g-4 align-items-start">
+      <!-- Brand / Copyright -->
+      <div class="col-12 col-lg-4 text-center text-lg-start">
+        <div class="footer-brand fw-semibold mb-1">Zafaryab Haider</div>
+        <div class="footer-muted small">&copy; 2025 Zafaryab. All rights reserved.</div>
+      </div>
+
+      <!-- Contact -->
+      <div class="col-12 col-lg-5">
+        <ul class="footer-list">
+          <li>
+            <i class="fa-solid fa-envelope me-2"></i>
+            <a href="mailto:zafaryab.haider@maine.edu">zafaryab.haider@maine.edu</a>
+          </li>
+          <li>
+            <i class="fa-solid fa-phone me-2"></i>
+            <a href="tel:+12077190411">123 9876</a>
+          </li>
+          <li>
+            <i class="fa-solid fa-location-dot me-2"></i>
+            <span>Oslo, Paine, Aus</span>
+          </li>
+        </ul>
+      </div>
+
+      <!-- Social -->
+      <div class="col-12 col-lg-3 text-center text-lg-end">
+        <div class="footer-muted small mb-2">Connect</div>
+        <div class="footer-social d-inline-flex gap-2">
+          <a href="https://linkedin.com/in/zafaryab" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+            <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+          <a href="https://instagram.com/zhaider_lens" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="https://facebook.com/zaffuyab" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <hr class="footer-divider my-4" />
+
+    <div class="d-flex flex-column flex-md-row gap-2 justify-content-between align-items-center footer-muted small">
+      <span>Built with Bootstrap</span>
+      <a class="footer-top" href="#" aria-label="Back to top">
+        Back to top <i class="fa-solid fa-arrow-up ms-1"></i>
+      </a>
     </div>
   </div>
 </footer>
