--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="styles.css">
+
 <footer class="site-footer text-white">
   <div class="container py-4 py-lg-5">
     <div class="row g-4 align-items-start">
