--- a/photography.html
+++ b/photography.html
@@ -6,7 +6,8 @@
   <title>Zafaryab Haider | Photography</title>
   <meta name="description" content="Photography portfolio of Zafaryab Haider — landscapes, street, and moments." />
 
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
+
 
   <!-- Performance hints -->
   <link rel="preconnect" href="https://cdn.jsdelivr.net" />
@@ -314,6 +315,7 @@
   </script>
 </body>
 </html>
+
 
 
 
