--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,8 @@
   <title>Zafaryab Haider | Resume</title>
   <meta name="description" content="Zafaryab Haider — Ph.D. Candidate (ECE, UMaine). Research: LLMs, Safe & Trustworthy AI, Security." />
 
+  <link rel="stylesheet" href="css/style.css">
+
   <!-- Performance hints -->
   <link rel="preconnect" href="https://cdn.jsdelivr.net" />
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
