--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               </div>
             </div>
           </div>
-
+        </div>
         
         <!-- Mobile scroll row -->
         <div class="scroll-row d-md-none">
