--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
         
         <!-- Mobile scroll row -->
-        <div class="scroll-row d-md-none">
+        <!-- <div class="scroll-row d-md-none">
           <div class="pro-card p-4">
             <div class="d-flex align-items-start gap-3">
               <div class="icon"><i class="fa-solid fa-people-group"></i></div>
@@ -229,7 +229,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </section>
