--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
               </div>
 
               <div class="d-flex gap-2 flex-wrap">
-                <a class="btn btn-brand text-white" href="resume.pdf" target="_blank" rel="noopener">
+                <a class="btn btn-brand text-white" href="assets/pdf/resume.pdf" target="_blank" rel="noopener">
                   <i class="fa-solid fa-download me-2"></i>Download PDF
                 </a>
                 <a class="btn btn-outline-dark" href="#publications">
